src/objects/Apttus__MSTeamsDetail__c.object
<CustomObject>
    <description>Object to store the MS Teams related/specific information</description>
    <fields>
        <fullName>Apttus__ChannelId__c</fullName>
        <description>Channel Id of MS Teams</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Unique Channel Id</inlineHelpText>
        <label>Channel Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ChannelName__c</fullName>
        <description>Channel name to be created for review cycle</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of the Channel created for review cycle</inlineHelpText>
        <label>Channel Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>Description of the MS team</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Description of the MS team</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DownloadURL__c</fullName>
        <description>Download URL of uploaded document</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Download URL of the uploaded document</inlineHelpText>
        <label>Download URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Exception__c</fullName>
        <description>Stores error coming from MS Teams, if any</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Error messages from MS Teams</inlineHelpText>
        <label>Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__GroupId__c</fullName>
        <description>Group Id of MS Teams</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Unique Group Id</inlineHelpText>
        <label>Group Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__GroupName__c</fullName>
        <description>Group name to be created for review cycle</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of the Group created for review cycle</inlineHelpText>
        <label>Group Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__MSTeamsStatusType__c</fullName>
        <description>Status Type of review cycle</description>
        <inlineHelpText>Review cycle status type</inlineHelpText>
        <label>MS Teams Status Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GroupCreation</fullName>
                </value>
                <value>
                    <fullName>TeamCreation</fullName>
                </value>
                <value>
                    <fullName>ChannelCreation</fullName>
                </value>
                <value>
                    <fullName>Upload</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>ReviewEnd</fullName>
                </value>
                <value>
                    <fullName>ReviewCancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__MSTeamsStatus__c</fullName>
        <description>Status of the review cycle</description>
        <inlineHelpText>Review cycle status</inlineHelpText>
        <label>MS Teams Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ReviewCycleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Review Cycle Lookup</description>
        <inlineHelpText>Review Cycle Lookup</inlineHelpText>
        <label>Review Cycle</label>
        <referenceTo>Apttus__ReviewCycle__c</referenceTo>
        <relationshipLabel>MS Teams Details (Review Cycle)</relationshipLabel>
        <relationshipName>MSTeamsDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__ReviewDetail__c</fullName>
        <description>Additional detail of job</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Additional job details</inlineHelpText>
        <label>Review Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__TeamId__c</fullName>
        <description>Team Id of MS Teams</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Unique Team Id</inlineHelpText>
        <label>Team Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__UploadURL__c</fullName>
        <description>Upload URL of MS teams</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Upload URL of MS teams</inlineHelpText>
        <label>Upload URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>MS Teams Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MS Teams Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>